--- a/kubernetes/manifests/backstage/kustomization.yaml
+++ b/kubernetes/manifests/backstage/kustomization.yaml
@@ -1,10 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- ml-skeleton-template.yaml
 - backstage-app-config.yaml
 - backstage-entities.yaml
 - backstage-templates.yaml
-- backstage-template-folder-configmap.yaml
 - deployment.yaml
 - ingress.yaml
 - namespace.yaml
