--- a/backstage/templates/ml-model-template.yaml
+++ b/backstage/templates/ml-model-template.yaml
@@ -20,7 +20,6 @@ spec:
         - modelName
         - modelType
         - modelVersion
-        - namespace
       properties:
         modelName:
           title: Model Name
@@ -59,6 +58,8 @@ spec:
           default: none
     
     - title: Deployment Configuration
+      required:
+        - namespace
       properties:
         namespace:
           title: Kubernetes Namespace
