--- a/kubernetes/manifests/backstage/ingress.yaml
+++ b/kubernetes/manifests/backstage/ingress.yaml
@@ -4,10 +4,10 @@ metadata:
   name: backstage
   namespace: backstage
   annotations:
-    kubernetes.io/ingress.class: "nginx"
 spec:
+  ingressClassName: nginx
   rules:
-  - host: backstage.example.com  # Update this to your actual domain
+  - host: backstage.example.com
     http:
       paths:
       - path: /
